syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sunpe.grpc_with_consul.example.proto";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc sayHello (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}

// protoc --plugin=protoc-gen-grpc-java --grpc-java_out=. --java_out=. --proto_path=. -I . hello_world.proto